syntax = "proto3";

package iam;

option go_package = "github.com/leepala/OldGeneralBackend/Proto/iam";

service iam {
    rpc IAMLogin(IamLoginRequest) returns (IamLoginReply);
    rpc IAMRegister(CreateUserRequest) returns (CreateUserReply);
    rpc IAMCheckLoginStatus(IamCheckStatusRequest) returns (IamCheckStatusReply);
}

message CreateUserRequest {
    string RequestId = 1;
    int64 RequestTime = 2;
    string UserName = 3;
    string Password = 4;
}

message CreateUserReply {
    string RequestId = 1;
    int64 ReplyTime = 2;
    bool IsSuccess = 3;
    optional string Message = 4;
}

message DeleteUserRequest {
    string RequestId = 1;
    int64 RequestTime = 2;
    string UserId = 3;
    string Token = 4;
}

message DeleteUserReply {
    string RequestId = 1;
    int64 ReplyTime = 2;
    bool IsSuccess = 3;
    optional string Message = 4;
}

message UpdateUserRequest {
    string RequestId = 1;
    int64 RequestTime = 2;
    string UserId = 3;
    string UserName = 4;
    string Password = 5;
}

message UpdateUserReply {
    string RequestId = 1;
    int64 ReplyTime = 2;
    bool IsSuccess = 3;
    optional string Message = 4;
}

message IamLoginRequest {
    string RequestId = 1;
    int64 RequestTime = 2;
    string UserName = 3;
    string Password = 4;
}

message IamLoginReply {
    string RequestId = 1;
    int64 ReplyTime = 2;
    string token = 3;
    string UserId = 4;
}

message IamLogoutRequest {
    string RequestId = 1;
    int64 RequestTime = 2;
    string Token = 3;
}

message IamLogoutReply{
    string RequestId = 1;
    int64 ReplyTime = 2;
    bool IsSuccess = 3;
    optional string Message = 4;
}

message IamCheckStatusRequest {
    string RequestId = 1;
    int64 RequestTime = 2;
}

message IamCheckStatusReply {
    string RequestId = 1;
    int64 ReplyTime = 2;
    bool IsValid = 3;
    string UserId = 4;
    string Token = 5;
}
